simple/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test
    app.kubernetes.io/component: test
    app.kubernetes.io/instance: test
  name: test-preview
  namespace: argo-rollout-simple
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    deployment: test
  sessionAffinity: None
  type: ClusterIP
